Add auto scrollbars if content would be visible without them.

The check to avoid adding auto scrollbars if the contents aren't
visible should consider whether the contents would be visible in the
absence of a scrollbar.  It's a weird edge case, because adding the
scrollbar will hide the content, but it's the only reasonable thing to
do.

BUG=690115
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2759213002
Cr-Commit-Position: refs/heads/master@{#458348}

Former-commit-id: 8c762e79eef5c9a6d7bce492ec42e8870ab21f8e